--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -45,14 +45,14 @@
 }
 
 .gameCard:hover {
-    border-color: #333;
+    border-color: #F0F0F0;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    transform: scale(1.03)
 }
   
 .gameCard:active {
-    border-color: #000;
+    border-color: #F0F0F0;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
-    transform: translateY(2px);
 }
 
 .gameTextContainer {
