--- a/src/pages/details/styles.css
+++ b/src/pages/details/styles.css
@@ -34,6 +34,11 @@ h3 {
     padding-top: 1rem;
 }
 
+#textDetailsContainer div:nth-child(4) p {
+    padding-right: 11rem;
+    text-align: start;
+}
+
 .infoConatiners, div {
     margin-bottom: -0.5rem;
     flex-wrap: wrap;
