--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -9,17 +9,44 @@
     flex-direction: row;
 }
 
-#searchInput {
-    border: none;
-    border-radius: 5px;
-    padding-left: 10px;
-    width: 300px;
-    height: 34px;
+#formgames div {
+    display: flex;
+    height: 2.4rem;
+    align-items: center;
+    border-radius: 20rem;
+    background-color: white;
+    height: 3rem;
+    width: 30rem;
 }
 
-.buttonContainer {
+#searchInput {
     display: flex;
+    border: none;
+    width: 100%;
+    height: 100%;
+    padding-left: 1rem;
+    background-color: transparent;
+    outline: none;
+}
+
+#searchInput:focus {
+    margin-left: -2px;
+    padding-left: 1.05rem;
+    border: 1px solid #5698fb;
+    border-top-left-radius: 20rem;
+    border-bottom-left-radius: 20rem;
+}
+
+#submit {
+    display: flex;
+    border: none;
+    height: 100%;
+    width: 15%;
+    align-items: center;
     justify-content: center;
+    border-top-right-radius: 20rem;
+    border-bottom-right-radius: 20rem;
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 #list {
