Update form padding

--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -1,7 +1,7 @@
 .formContainer {
     display: flex;
-    padding: 15px;
     justify-content: center;
+    padding-bottom: 1.4rem;
 }
 
 #formgames {
